Revision history for {{$dist->name}}

{{$NEXT}}
    - Updated the build to use [@Starter]
    - Placed dependencies in cpanfile

0.003     2011-04-22
    * Packaging updates

0.002     2011-01-21
    * Make the tests slightly more robust

0.001     2011-01-18
    * First released version