@@ -5,8 +5,9 @@ on 'runtime' => sub {
     requires 'base';
     requires 'Carp';
     requires 'Exporter';
+    requires 'HTML::Entities';
+    requires 'IO::Socket::SSL';
     requires 'Try::Tiny';
-    requires 'URI';
     requires 'WWW::Shorten' => '3.09';
 };
 
