@@ -6,13 +6,18 @@ copyright_year      = 2011
 
 version = 0.004
 
+[Git::GatherDir]
+exclude_filename = Makefile.PL
+exclude_filename = META.json
+exclude_filename = README.md
+
 [@Starter]
+-remove = GatherDir
+
 revision = 1
 Test::Compile.xt_mode = 1
 ReadmeAnyFromPod.source_filename = lib/WWW/Shorten/IsGd.pm
-GatherDir.exclude_filename[0] = Makefile.PL
-GatherDir.exclude_filename[1] = META.json
-GatherDir.exclude_filename[2] = README.md
+
 
 [ReadmeAnyFromPod / Markdown_Readme]
 type = markdown
